# -*- mode: CMAKE; -*-

# install headers
install(FILES arangodbcpp/Collection.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/Document.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/Cursor.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/Connection.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/DocOptions.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/Server.h DESTINATION include/arangodbcpp)
install(FILES arangodbcpp/Database.h DESTINATION include/arangodbcpp)
